# ai-robot

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
backend/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  test_api.sh  test_api_with_progress.sh  test_grpc_api.sh  test_grpc_api_with_progress.sh
backend/api/proto/: completion.pb.go  completion_grpc.pb.go
backend/cmd/server/: main.go
backend/internal/api/: handlers.go
backend/internal/config/: config.go
backend/internal/grpc/: server.go
backend/internal/service/: ai_service.go  cache_service.go
backend/internal/types/: completion.go
backend/pkg/dify/: client.go
backend/pkg/redis/: client.go
device/: README.md
device/cpp-bridge/: README.md
device/cpp-bridge/ros/: README.md  build.gradle.kts
device/cpp-bridge/unitree/: README.md  build.gradle.kts
device/cruzr/: README.md  build.gradle.kts
device/cruzr/libs/: rosa-speech-override-1.0.0.aar
device/cruzr/src/: .gitignore
device/cruzr/src/androidMain/: AndroidManifest.xml
device/yan-api/: .gitignore  README.md  build.gradle.kts
device/yan-api/docs/: yan_api_reference.md
device/yan-api/src/linuxArm64Main/kotlin/: Main.kt
device/yan-api/src/nativeInterop/cinterop/: PythonInterop.def  pythonInterop.def
device/yan-api/src/nativeInterop/cpp/: CMakeLists.txt  YanAPI.h  python_export.c  toolchain.cmake
device/yan-api/src/nativeInterop/cpp/include/: crypt.h  curses.h  python_export.h
device/yan-api/src/nativeInterop/cpp/include/python3.7m/: pyconfig.h
device/yan-api/src/nativeMain/kotlin/: PyUtils.kt  YanConnection.kt  YanDevice.kt  YanDeviceStatusService.kt  YanDiagnosisService.kt  YanEmotionService.kt  YanLauncher.kt  YanLightService.kt  YanLocomotionService.kt  YanNavigationService.kt  YanPowerService.kt  YanProtocol.kt  YanSensorService.kt  YanServoService.kt  YanSkillManager.kt  YanSpeechService.kt  YanStatusManager.kt  YanVisionService.kt
device/yan-api/src/nativeMain/resources/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: README.md
shared/core/: README.md  build.gradle.kts
shared/generator/protobuf-codegen/: build.gradle.kts
shared/generator/service-gen/: build.gradle.kts
shared/protobuf-codegen/: build.gradle.kts
shared/protocol/: build.gradle.kts
web/: README.md  build.gradle.kts
web/src/components/: DeviceControl.tsx  DeviceList.tsx
web/src/jsMain/resources/: index.html
(+48 files in other folders)
